Responsive for Tab as well

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
           <button class="btn Highlight-Bg white">Explore More</button>
         </div>
       </section>
+      <section>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit magnam doloremque reprehenderit. Blanditiis quam ullam ipsum mollitia provident tempore quibusdam magnam, ducimus beatae tenetur ea unde cumque quisquam perspiciatis officia laboriosam dolorem accusantium eum amet incidunt inventore hic? Nisi libero impedit pariatur expedita assumenda praesentium perferendis molestiae perspiciatis laborum dicta?</section>
     </main>
   </body>
 </html>
