--- a/index.html
+++ b/index.html
@@ -98,10 +98,42 @@
         </div>
         <div class="Feature-Img-Container">
           <img src="./images/architect.png" alt="Architect Picture" />
-          <button class="btn Highlight-Bg white"><span class="JamboTxt">10+ Years</span> Experience</button>
+          <button class="btn Highlight-Bg white">
+            <span class="JamboTxt">10+ Years</span> Experience
+          </button>
         </div>
       </section>
-      
+      <section id="Facts-Section">
+        <div class="Facts-Headings">
+          <h1 class="Dark1">Some Facts</h1>
+          <p class="Dark3">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration.
+          </p>
+        </div>
+        <div class="Facts-Cards-Container ">
+          <div class="Facts-Cards">
+            <img src="./images/icons/ribon.png" alt="" />
+            <h1 class="Dark2">54</h1>
+            <p class="Dark3">Awards Winnings</p>
+          </div>
+          <div class="Facts-Cards">
+            <img src="./images/icons/projects.png" alt="" />
+            <h1 class="Dark2">1458</h1>
+            <p class="Dark3">projects Finished</p>
+          </div>
+          <div class="Facts-Cards">
+            <img src="./images/icons/customers.png" alt="" />
+            <h1 class="Dark2">590</h1>
+            <p class="Dark3">Clients Worked</p>
+          </div>
+          <div class="Facts-Cards">
+            <img src="./images/icons/email.png" alt="" />
+            <h1 class="Dark2">22579</h1>
+            <p class="Dark3">Email Sent</p>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
